<resources>
    <string name="app_name">CuteCats</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="favourite_it">fav it</string>
    <string name="love_it">love it</string>
    <string name="nope_it">nope it</string>
    <string name="vote">Vote</string>
    <string name="breeds">Breeds</string>
    <string name="upload">Upload</string>
    <string name="breed_info">Breed info</string>
    <string name="delete">Delete</string>
    <string name="upload_cat_image">Upload cat image</string>
    <string name="favourites">Favourites</string>
</resources>