<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/breeds_navigation">

    <include app:graph="@navigation/breeds_navigation"/>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.github.ncliff.cutecats.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.github.ncliff.cutecats.ui.upload.UploadFragment"
        android:label="@string/upload"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/navigation_vote"
        android:name="com.github.ncliff.cutecats.ui.vote.VoteFragment"
        android:label="@string/vote"
        tools:layout="@layout/fragment_vote" />

</navigation>