<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".ui.view.vote.VoteFragment">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/vote_cat_image"
        app:layout_constraintEnd_toEndOf="@id/vote_cat_image"
        app:layout_constraintStart_toStartOf="@id/vote_cat_image"
        app:layout_constraintTop_toTopOf="@id/vote_cat_image" />

    <ImageView
        android:id="@+id/vote_cat_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_nope_it"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_nope_it"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/nope_it"
        app:icon="@drawable/ic_baseline_thumb_down_24"
        app:layout_constraintBottom_toTopOf="@id/btn_fav_it"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_love_it" />

    <Button
        android:id="@+id/btn_love_it"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/love_it"
        app:icon="@drawable/ic_baseline_thumb_up_24"
        app:layout_constraintBottom_toTopOf="@id/btn_fav_it"
        app:layout_constraintEnd_toStartOf="@id/btn_nope_it"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_fav_it"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/favourite_it"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>